<?xml version="1.0" encoding="utf-8"?>
<!--
* <ul>
* Android Tutorial, An <strong>Android2EE</strong>'s project.</br>
* Produced by <strong>Dr. Mathias SEGUY</strong> with the smart contribution of <strong>Julien PAPUT</strong>.</br>
* Delivered by <strong>http://android2ee.com/</strong></br>
* Belongs to <strong>Mathias Seguy</strong></br>
* ****************************************************************************************************************</br>
* This code is free for any usage but can't be distribute.</br>
* The distribution is reserved to the site <strong>http://android2ee.com</strong>.</br>
* The intelectual property belongs to <strong>Mathias Seguy</strong>.</br>
* <em>http://mathias-seguy.developpez.com/</em></br>
* </br>
* For any information (Advice, Expertise, J2EE or Android Training, Rates, Business):</br>
* <em>mathias.seguy.it@gmail.com</em></br>
* *****************************************************************************************************************</br>
* Ce code est libre de toute utilisation mais n'est pas distribuable.</br>
* Sa distribution est reservée au site <strong>http://android2ee.com</strong>.</br>
* Sa propriété intellectuelle appartient à <strong>Mathias Séguy</strong>.</br>
* <em>http://mathias-seguy.developpez.com/</em></br>
* </br>
* Pour tous renseignements (Conseil, Expertise, Formations J2EE ou Android, Prestations, Forfaits):</br>
* <em>mathias.seguy.it@gmail.com</em></br>
* *****************************************************************************************************************</br>
* Merci à vous d'avoir confiance en Android2EE les Ebooks de programmation Android.
* N'hésitez pas à nous suivre sur twitter: http://fr.twitter.com/#!/android2ee
* N'hésitez pas à suivre le blog Android2ee sur Developpez.com : http://blog.developpez.com/android2ee-mathias-seguy/
* *****************************************************************************************************************</br>
* com.android2ee.android.tuto</br>
* 25 mars 2011</br>
 -->
<resources>
    <string name="hello">Hello World, CheckedTextViewTuto!</string>
    <string name="app_name">CheckedTextViewTuto</string>
    <string name="like">What do you like :</string>
    <string name="chocolate">Chocolate</string>
    <string name="television">Television</string>
    <string name="internet">Internet</string>
    <string name="nicotine">Nicotine</string>
    <string name="hug">Hug</string>
    <string name="santaclaus">Santa Claus</string>
    <string name="me2chocolate">Me too, I like so much Chocolate</string>
    <string name="me2television">Me too, I like so much Television</string>
    <string name="me2internet">Me too, I like so much Internet</string>
    <string name="me2nicotine">Me too, I like so much Nicotine</string>
    <string name="me2hug">Me too, I like so much Hug</string>
    <string name="me2santaclaus">Me too, I like so much Santa Claus</string>
    <string name="show">Show me the choice</string>
    <string name="choice">Your choice is :</string>
</resources>
