<?xml version="1.0" encoding="utf-8"?>
<!--
* <ul>
* Android Tutorial, An <strong>Android2EE</strong>'s project.</br>
* Produced by <strong>Dr. Mathias SEGUY</strong> with the smart contribution of <strong>Julien PAPUT</strong>.</br>
* Delivered by <strong>http://android2ee.com/</strong></br>
* Belongs to <strong>Mathias Seguy</strong></br>
* ****************************************************************************************************************</br>
* This code is free for any usage but can't be distribute.</br>
* The distribution is reserved to the site <strong>http://android2ee.com</strong>.</br>
* The intelectual property belongs to <strong>Mathias Seguy</strong>.</br>
* <em>http://mathias-seguy.developpez.com/</em></br>
* </br>
* For any information (Advice, Expertise, J2EE or Android Training, Rates, Business):</br>
* <em>mathias.seguy.it@gmail.com</em></br>
* *****************************************************************************************************************</br>
* Ce code est libre de toute utilisation mais n'est pas distribuable.</br>
* Sa distribution est reservée au site <strong>http://android2ee.com</strong>.</br>
* Sa propriété intellectuelle appartient à <strong>Mathias Séguy</strong>.</br>
* <em>http://mathias-seguy.developpez.com/</em></br>
* </br>
* Pour tous renseignements (Conseil, Expertise, Formations J2EE ou Android, Prestations, Forfaits):</br>
* <em>mathias.seguy.it@gmail.com</em></br>
* *****************************************************************************************************************</br>
* Merci à vous d'avoir confiance en Android2EE les Ebooks de programmation Android.
* N'hésitez pas à nous suivre sur twitter: http://fr.twitter.com/#!/android2ee
* N'hésitez pas à suivre le blog Android2ee sur Developpez.com : http://blog.developpez.com/android2ee-mathias-seguy/
* *****************************************************************************************************************</br>
* com.android2ee.android.tuto</br>
* 25 mars 2011</br>
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/like"
    />
<ScrollView android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#3366FF">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android" 
		 android:id="@+id/checkedtextviewchocolate" 
		 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:gravity="center_vertical" 
		 android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
		 android:paddingLeft="6dip" 
		 android:paddingRight="6dip" 
		 android:text="@string/chocolate" 
		 android:typeface="sans" android:textSize="16dip"/> 
	<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android" 
		 android:id="@+id/checkedtextviewtelevision" 
		 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:gravity="center_vertical" 
		 android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
		 android:paddingLeft="6dip" 
		 android:paddingRight="6dip" 
		 android:text="@string/television" 
		 android:typeface="sans" android:textSize="16dip"/> 
	<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android" 
		 android:id="@+id/checkedtextviewinternet" 
		 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:gravity="center_vertical" 
		 android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
		 android:paddingLeft="6dip" 
		 android:paddingRight="6dip" 
		 android:text="@string/internet" 
		 android:typeface="sans" android:textSize="16dip"/> 
	<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android" 
		 android:id="@+id/checkedtextviewnicotine" 
		 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:gravity="center_vertical" 
		 android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
		 android:paddingLeft="6dip" 
		 android:paddingRight="6dip" 
		 android:text="@string/nicotine" 
		 android:typeface="sans" android:textSize="16dip"/> 
	<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android" 
		 android:id="@+id/checkedtextviewhug" 
		 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:gravity="center_vertical" 
		 android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
		 android:paddingLeft="6dip" 
		 android:paddingRight="6dip" 
		 android:text="@string/hug" 
		 android:typeface="sans" android:textSize="16dip"/> 
	<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android" 
		 android:id="@+id/checkedtextviewsantaclaus" 
		 android:layout_width="fill_parent" 
		 android:layout_height="wrap_content" 
		 android:gravity="center_vertical" 
		 android:checkMark="?android:attr/listChoiceIndicatorMultiple" 
		 android:paddingLeft="6dip" 
		 android:paddingRight="6dip" 
		 android:text="@string/santaclaus" 
		 android:typeface="sans" android:textSize="16dip"/> 
	<Button android:id="@+id/btnShow"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" android:text="@string/show"
		android:layout_x="60px" android:layout_y="122px">
	</Button>
	</LinearLayout>
    </ScrollView>
</LinearLayout>

